tests/files/success/type_annotation_parsing.boat
data List:
    | link(f: Number, r: List)
    | empty()
end

let n: Number = 5
let incr: Number -> Number = lambda(x): x + 1 end
let l: List<Number> = link(5,empty)
