tests/files/error/type_inference_fails_def.boat
def f(n: Number) -> Number:
    n
end

let x: Boolean = f(1)